==> Embedfire-freertos/ebf_freertos_peripheral_code_stm32f407_jiaoyang/20-FreeRTOS-RTC—日历实验/User/lcd/bsp_ili9806g_lcd.c <==
#include "./lcd/bsp_ili9806g_lcd.h"
#include "./font/fonts.h"

static void ILI9806G_GPIO_Config ( void )
{
	GPIO_InitTypeDef  GPIO_Initure;

    /* Enable GPIOs clock */
  __HAL_RCC_GPIOD_CLK_ENABLE();
  __HAL_RCC_GPIOE_CLK_ENABLE();
  __HAL_RCC_GPIOF_CLK_ENABLE();
  __HAL_RCC_GPIOG_CLK_ENABLE();
  __HAL_RCC_FSMC_CLK_ENABLE();			//使能FSMC时钟
  
    /* Common GPIO configuration */
  GPIO_Initure.Mode      = GPIO_MODE_OUTPUT_PP;  //推挽输出
  GPIO_Initure.Pull      = GPIO_PULLUP;
  GPIO_Initure.Speed     = GPIO_SPEED_HIGH;
 
  GPIO_Initure.Pin=GPIO_PIN_5;
  HAL_GPIO_Init(GPIOE,&GPIO_Initure);
  GPIO_Initure.Pin=GPIO_PIN_10;
	HAL_GPIO_Init(GPIOG,&GPIO_Initure);
  
  //初始化PF11
	GPIO_Initure.Pin=GPIO_PIN_11;
	HAL_GPIO_Init(GPIOF,&GPIO_Initure);
  
  GPIO_Initure.Mode=GPIO_MODE_AF_PP; 
  GPIO_Initure.Alternate=GPIO_AF12_FSMC;	//复用为FSMC
  
	//初始化PD0,1,4,5,8,9,10,14,15
	GPIO_Initure.Pin=GPIO_PIN_0|GPIO_PIN_1|GPIO_PIN_4|GPIO_PIN_5|GPIO_PIN_8|\
					         GPIO_PIN_9|GPIO_PIN_10|GPIO_PIN_14|GPIO_PIN_15; 
  HAL_GPIO_Init(GPIOD, &GPIO_Initure);
  
  	//初始化PE7,8,9,10,11,12,13,14,15
	GPIO_Initure.Pin=GPIO_PIN_7|GPIO_PIN_8|GPIO_PIN_9|GPIO_PIN_10|GPIO_PIN_11|\
                     GPIO_PIN_12|GPIO_PIN_13|GPIO_PIN_14|GPIO_PIN_15;
	HAL_GPIO_Init(GPIOE,&GPIO_Initure);
	
	//初始化PF9
	GPIO_Initure.Pin=GPIO_PIN_0;
	HAL_GPIO_Init(GPIOF,&GPIO_Initure);
	
}

static void ILI9806G_FSMC_Config ( void )
{
   SRAM_Handler.Instance = FMC_NORSRAM_DEVICE;
   SRAM_Handler.Extended = FMC_NORSRAM_EXTENDED_DEVICE;
   __HAL_RCC_FSMC_CLK_ENABLE();	
  /* SRAM device configuration */  
  Timing.AddressSetupTime      = 0x04;
  Timing.AddressHoldTime       = 0x00;
  Timing.DataSetupTime         = 0x04;
  Timing.BusTurnAroundDuration = 0x00;
  Timing.CLKDivision           = 0x00;
  Timing.DataLatency           = 0x00;
  Timing.AccessMode            = FSMC_ACCESS_MODE_B;
 
  SRAM_Handler.Init.NSBank=FSMC_NORSRAM_BANK3;     					        //使用NE3
	SRAM_Handler.Init.DataAddressMux=FSMC_DATA_ADDRESS_MUX_DISABLE; 	//地址/数据线不复用
	SRAM_Handler.Init.MemoryType= FSMC_MEMORY_TYPE_NOR;   				    //NOR
	SRAM_Handler.Init.MemoryDataWidth=FSMC_NORSRAM_MEM_BUS_WIDTH_16; 	//16位数据宽度
	SRAM_Handler.Init.BurstAccessMode=FSMC_BURST_ACCESS_MODE_DISABLE; //是否使能突发访问,仅对同步突发存储器有效,此处未用到
	SRAM_Handler.Init.WaitSignalPolarity=FSMC_WAIT_SIGNAL_POLARITY_LOW;//等待信号的极性,仅在突发模式访问下有用
	SRAM_Handler.Init.WaitSignalActive=FSMC_WAIT_TIMING_BEFORE_WS;   	//存储器是在等待周期之前的一个时钟周期还是等待周期期间使能NWAIT
	SRAM_Handler.Init.WriteOperation=FSMC_WRITE_OPERATION_ENABLE;    	//存储器写使能
	SRAM_Handler.Init.WaitSignal=FSMC_WAIT_SIGNAL_DISABLE;           	//等待使能位,此处未用到
	SRAM_Handler.Init.ExtendedMode=FSMC_EXTENDED_MODE_DISABLE;        //读写使用相同的时序
	SRAM_Handler.Init.AsynchronousWait=FSMC_ASYNCHRONOUS_WAIT_DISABLE;//是否使能同步传输模式下的等待信号,此处未用到
	SRAM_Handler.Init.WriteBurst=FSMC_WRITE_BURST_DISABLE;           	//禁止突发写
  SRAM_Handler.Init.ContinuousClock=FSMC_CONTINUOUS_CLOCK_SYNC_ASYNC;
  
	HAL_SRAM_Init(&SRAM_Handler,&Timing,&Timing);	
		
}

void ILI9806G_BackLed_Control ( FunctionalState enumState )
{
	if ( enumState )
  {
    digitalH( GPIOE, GPIO_PIN_5  );	
  }
	else
  {
    digitalL( GPIOE, GPIO_PIN_5 );
  }
		
}

void ILI9806G_Rst ( void )
{			
	digitalL( GPIOF,GPIO_PIN_11 );	 //低电平复位

	ILI9806G_Delay ( 0xAFF ); 					   

	digitalH( GPIOF,GPIO_PIN_11);		 	 

	ILI9806G_Delay ( 0xAFF ); 	
	
}
